# osu_username_notifier

./: .env  Cargo.toml  README.md
src/: main.rs
src/discord_bot/: bot.rs  mod.rs
src/discord_bot/commands/: mod.rs  username_notify.rs
src/discord_bot/events/: mod.rs  ready_handler.rs
